	1308 Golden Axe:		NO INFO. Item not implemented...
	13160, 13161 Destroyer:	Can break target's armor when fired at close range.
	-----
	4296 Cramp Card:	Temp Plug: 10z per mob-level on a 3% chance.
	7458 Fortune Horn:	It's a custom name ^^;
	12017 Speed Decreasing Potion: A potion which decreases the moving speed of a character for a duration.
	-----

=========================
07/12
	* Tao Gunga will now summon G_Megalith's. [Poki#3]
	* Updated the new Rachel mob names and the new G_ mobs stats & skills. Also removed there poring drops. [Poki#3]
	* Updated Detale's Skills [Playtester]
	* Fixed element, mode and attack speed of some monsters [Playtester]
07/11
	* Fixed Nurse Cap, Memory Book and Dagger of Counter [Playtester]
	* Marionette now drops "Marionette Doll" [Playtester]
07/10
	* Corrected Frost Nova's splash range and Land Protector's cast range.
	  Thanks to Haplo.  [Skotlex]
	* Fixed Beast Strafing not having inf2 = 512 (to make it a
	  target-auto-select skill) [Skotlex]
	* Fixed the duration of Land Protector, removed unused time2 value from
	  their entries in skill_cast_db. Thanks to Haplo. [Skotlex]
	* Corrected skill require entry from the Twilight Pharmacy skills.
	  [Skotlex]
	* Removed Frost Nova's skill_unit_db entry. [Skotlex]
07/09
	* Added Guillontine's SP Drain per attack [Playtester]
	* More item updates thanks to Haplo [Playtester]
	* Added various items and fixed armor charm [Playtester]
07/05
	* Added Thanatos Tower Quest items to item_trade.txt [Playtester]
	* Added correct card effects for "Status Effect on both" [Playtester]
07/04
	* Added temp plugs for new headgears. [Vicious]
	- I only added this for VIEW ID. so someone needs to update everything else.
	* Updated item_trade.txt to Aegis X.2 ItemMoveInfo.txt [Vicious]
	* Updated the cooking items so they are ready for official implementation [Playtester]
	- also slightly raised drop rates of Cooking Sets
	* Silver Tiara's bonus is Int AGAIN (Gravity can't decide) [Playtester]