@@ -4,6 +4,8 @@ AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO 
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
 2006/07/13
+	* Corrected NJ_KAENSIN as per description. [Skotlex]
+	* Fixed a leaking map_freeblocklock on skill_del_unitgroup. [Skotlex]
 	* Changed the default save interval to 5 minutes. Added support for
 	  specifying fixed save-intervals by using negative values. [Skotlex] EG:
 	- Save interval set to 300 (5 minutes): all characters will be saved in
